--- a/frontend/src/app/employee/list-employees/list-employees.component.html
+++ b/frontend/src/app/employee/list-employees/list-employees.component.html
@@ -9,11 +9,11 @@
             <div *ngFor="let employee of employees"
                 class="flex justify-between items-center bg-gray-50 p-4 rounded-lg shadow">
                 <div class="flex flex-col">
-                    <h3 class="text-lg font-semibold text-gray-700">{{ employee.firstName }}</h3>
+                    <h3 class="text-lg font-semibold text-gray-700">{{ employee.firstName }} {{employee.lastName}}</h3>
                     <p class="text-sm text-gray-600">{{ employee.jobTitle }}</p>
                 </div>
                 <div class="flex space-x-2">
-                    <button
+                    <button (click)="editEmployee(employee.employeeId)"
                         class="px-4 py-2 bg-yellow-500 text-white text-sm font-medium rounded-md hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <span class="mdi mdi-pen"></span>
                     </button>
