--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,9 +3,8 @@
   <div class="px-4">
     <div class="flex items-center justify-between">
       <div class="flex shrink-0">
-        <a aria-current="page" class="flex items-center" href="/">
-          <i class="mdi mdi-home"></i>
-          <p class="sr-only">Test App</p>
+        <a aria-current="page" class="flex items-center" href="https://santic.netlify.app/">
+          <p class="font-bold">SC</p>
         </a>
       </div>
       <div class="hidden md:flex md:items-center md:justify-center md:gap-5">
